--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@types/node": "12.12.6",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "axios": "^0.19.0",
+    "axios-observable": "^1.1.2",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "rxjs": "^6.5.3",
     "typescript": "3.7.2"
   },
   "scripts": {
