--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
-    "node-sass": "^4.13.0",
+    "sass": "^1.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
